# Realtime-Speech-to-Speech-Translation

./: .gitignore  README.md  pyproject.toml
client/: pyproject.toml
client/src/client/: __init__.py  client.py
client/src/client/utils/: print_audio.py
server/: pyproject.toml  test.ipynb
server/src/server/: server.py
server/src/server/models/: speech_recognition.py  text_to_speech.py
speech-embedding/: create_embedding.py
