[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "datasets>=3.0.1",
    "numpy>=2.0.2",
    "openai-whisper",
    "pyaudio>=0.2.14",
    "pycryptodome>=3.21.0",
    "sentencepiece>=0.2.0",
    "soundfile>=0.12.1",
    "speechrecognition>=3.10.4",
    "torch>=2.4.1",
    "transformers>=4.45.1",
]


[project.scripts]
server = "server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
